Tabularize入れたりした

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-03  Kenjiskywalker <kenjiskywalker@nightskywalk.er>
+
+	* godlygeek/tabular install
+
 2013-06-26  Kenjiskywalker <kenjiskywalker@nightskywalk.er>
 
 	* zsh-completionsを設定
