--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-26  Kenjiskywalker <kenjiskywalker@nightskywalk.er>
+
+	* auto-fu.zsh add
+
 2013-08-21  Kenjiskywalker <kenjiskywalker@nightskywalk.er>
 
 	* add bling/vim-airline
