--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-10-20  Kenjiskywalker <kenjiskywalker@nightskywalk.er>
 
 	* doing gocode!!!
+	* add Gundo.vim
 
 2013-10-19  Kenjiskywalker <kenjiskywalker@nightskywalk.er>
 
