--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2013-11-21  Kenjiskywalker <kenjiskywalker@skynightwalk.local>
+
+	* Rubocop disable
+	* neocomplcache => neocomplete
+	* add vim-rails
+	* add nerdtree
+
+2013-11-08  Kenjiskywalker <kenjiskywalker@nightskywalker.local>
+
+	* Rubocop install
+
+2013-11-03  Kenjiskywalker <kenjiskywalker@nightskywalker.local>
+
+	* HyperSwitch install
+
+2013-11-02  Kenjiskywalker <kenjiskywalker@nightskywalker.local>
+
+	* Spark install
+
 2013-10-20  Kenjiskywalker <kenjiskywalker@nightskywalk.er>
 
 	* doing gocode!!!
