--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-29  Kenjiskywalker <kenjiskywalker@skynightwalk.local>
+
+	* add yankround.vim  (,n ,p)
+
 2013-11-21  Kenjiskywalker <kenjiskywalker@skynightwalk.local>
 
 	* Rubocop disable
