--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-27  Kenjiskywalker <kenjiskywalker@skynightwalk.local>
+
+	* http://qiita.com/k_kinukawa/items/3e5665325a4954e33019
+
 2014-01-16  Kenjiskywalker <kenjiskywalker@skynightwalk.local>
 
 	* disable smartinput
